made how to get sections easier to read

--- a/pkmn_dppt.html
+++ b/pkmn_dppt.html
@@ -266,8 +266,8 @@
                   </div>
                 </td>
                 <td>Ability Ribbon</td>
-                <td>Defeat Tower Tycoon Palmer the first time in Battle Tower Singles (21st battle)
-                  **Note: Can also be done in HGSS
+                <td>Defeat Tower Tycoon Palmer the first time in Battle Tower Singles (21st battle)**
+                  <br>**Note: Can also be done in HGSS
                 </td>
               </tr>
               <tr>
@@ -278,8 +278,8 @@
                   </div>
                 </td>
                 <td>Great Ability Ribbon</td>
-                <td>Defeat Tower Tycoon Palmer the second time in Battle Tower Singles (49th battle)
-                  **Note: Can also be done in HGSS
+                <td>Defeat Tower Tycoon Palmer the second time in Battle Tower Singles (49th battle)**
+                  <br>**Note: Can also be done in HGSS
                 </td>
               </tr>
               <tr>
@@ -290,8 +290,8 @@
                   </div>
                 </td>
                 <td>Double Ability Ribbon</td>
-                <td>Win 50 consecutive battles in Battle Tower Doubles
-                  **Note: Can also be done in HGSS
+                <td>Win 50 consecutive battles in Battle Tower Doubles**
+                  <br>**Note: Can also be done in HGSS
                 </td>
               </tr>
               <tr>
@@ -302,8 +302,8 @@
                   </div>
                 </td>
                 <td>Multi Ability Ribbon</td>
-                <td>Win 50 consecutive battles in Battle Tower Multi.
-                  **Note: Can also be done in HGSS
+                <td>Win 50 consecutive battles in Battle Tower Multi.**
+                  <br>**Note: Can also be done in HGSS
                 </td>
               </tr>
               <tr>
@@ -314,8 +314,8 @@
                   </div>
                 </td>
                 <td>Pair Ability Ribbon</td>
-                <td>Win 50 consecutive battles in Battle Tower Link Multi.
-                  **Note: Can also be done in HGSS
+                <td>Win 50 consecutive battles in Battle Tower Link Multi.**
+                  <br>**Note: Can also be done in HGSS
                 </td>
               </tr>
               <tr>
@@ -326,8 +326,8 @@
                   </div>
                 </td>
                 <td>World Ability Ribbon</td>
-                <td>Reach Rank 5 in the Wi-Fi Battle Tower challenge
-                  **Note: Can also be done in HGSS
+                <td>Reach Rank 5 in the Wi-Fi Battle Tower challenge**
+                  <br>**Note: Can also be done in HGSS
                 </td>
               </tr>
             </tbody>
@@ -352,8 +352,8 @@
                   </div>
                 </td>
                 <td>Effort Ribbon</td>
-                <td>Show mon with 510 EVs at Sunnyshore Market
-                  **Note: Can also be done in RSE, HGSS, XY, ORAS, USUM, SwSh & BDSP
+                <td>Show mon with 510 EVs at Sunnyshore Market**
+                  <br>**Note: Can also be done in RSE, HGSS, XY, ORAS, USUM, SwSh & BDSP
                 </td>
               </tr>
               <tr>
@@ -364,8 +364,8 @@
                   </div>
                 </td>
                 <td>Alert Ribbon</td>
-                <td>Show mon on Monday in Sunyshore City
-                  **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                <td>Show mon on Monday in Sunyshore City**
+                  <br>**Note: Can also be done in HGSS, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -376,8 +376,8 @@
                   </div>
                 </td>
                 <td>Shock Ribbon</td>
-                <td>Show mon on Tuesday in Sunyshore City
-                  **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                <td>Show mon on Tuesday in Sunyshore City**
+                  <br>**Note: Can also be done in HGSS, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -388,8 +388,8 @@
                   </div>
                 </td>
                 <td>Downcast Ribbon</td>
-                <td>Show mon on Wednesday in Sunyshore City
-                  **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                <td>Show mon on Wednesday in Sunyshore City**
+                  <br>**Note: Can also be done in HGSS, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -400,8 +400,8 @@
                   </div>
                 </td>
                 <td>Careless Ribbon</td>
-                <td>Show mon on Thursday in Sunyshore City
-                  **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                <td>Show mon on Thursday in Sunyshore City**
+                  <br>**Note: Can also be done in HGSS, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -412,8 +412,8 @@
                   </div>
                 </td>
                 <td>Relax Ribbon</td>
-                <td>Show mon on Friday in Sunyshore City
-                  **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                <td>Show mon on Friday in Sunyshore City**
+                  <br>**Note: Can also be done in HGSS, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -424,8 +424,8 @@
                   </div>
                 </td>
                 <td>Snooze Ribbon</td>
-                <td>Show mon on Saturday in Sunyshore City
-                  **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                <td>Show mon on Saturday in Sunyshore City**
+                  <br>**Note: Can also be done in HGSS, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -436,8 +436,8 @@
                   </div>
                 </td>
                 <td>Smile Ribbon</td>
-                <td>Show mon on Sunday in Sunyshore City
-                  **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                <td>Show mon on Sunday in Sunyshore City**
+                  <br>**Note: Can also be done in HGSS, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -448,8 +448,8 @@
                   </div>
                 </td>
                 <td>Gorgeous Ribbon</td>
-                <td>Buy for 10,000 pokemonies at the Ribbon Syndicate; located in Resort Area
-                  **Note: Can also be done in ORAS & BDSP
+                <td>Buy for 10,000 pokemonies at the Ribbon Syndicate; located in Resort Area**
+                  <br>**Note: Can also be done in ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -460,8 +460,8 @@
                   </div>
                 </td>
                 <td>Royal Ribbon</td>
-                <td>Buy for 100,000 pokemonies at the Ribbon Syndicate; located in the Resort Area
-                  **Note: Can also be done in ORAS & BDSP
+                <td>Buy for 100,000 pokemonies at the Ribbon Syndicate; located in the Resort Area**
+                  <br>**Note: Can also be done in ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -472,8 +472,8 @@
                   </div>
                 </td>
                 <td>Gorgeous Royal Ribbon</td>
-                <td>Buy for 999,999 pokemonies at the Ribbon Syndicate; located in the Resort Area
-                  **Note: Can also be done in ORAS & BDSP
+                <td>Buy for 999,999 pokemonies at the Ribbon Syndicate; located in the Resort Area**
+                  <br>**Note: Can also be done in ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -484,8 +484,8 @@
                   </div>
                 </td>
                 <td>Footprint Ribbon</td>
-                <td>Show mon with high happiness in Route 213
-                  **Note: Can also be done in XY, ORAS, USUM & BDSP
+                <td>Show mon with high happiness in Route 213**
+                  <br>**Note: Can also be done in XY, ORAS, USUM & BDSP
                 </td>
               </tr>
             </tbody>
