--- a/pkmn_hgss.html
+++ b/pkmn_hgss.html
@@ -56,8 +56,8 @@
                   </div>
                 </td>
                 <td>Ability Ribbon</td>
-                <td>Defeat Tower Tycoon Palmer the first time in Battle Tower Singles (21st battle)
-                  **Note: Can also be done in DPPt
+                <td>Defeat Tower Tycoon Palmer the first time in Battle Tower Singles (21st battle)**
+                  <br>**Note: Can also be done in DPPt
                 </td>
               </tr>
               <tr>
@@ -68,8 +68,8 @@
                   </div>
                 </td>
                 <td>Great Ability Ribbon</td>
-                <td>Defeat Tower Tycoon Palmer the second time in Battle Tower Singles (49th battle)
-                  **Note: Can also be done in DPPt
+                <td>Defeat Tower Tycoon Palmer the second time in Battle Tower Singles (49th battle)**
+                  <br>**Note: Can also be done in DPPt
                 </td>
               </tr>
               <tr>
@@ -80,8 +80,8 @@
                   </div>
                 </td>
                 <td>Double Ability Ribbon</td>
-                <td>Win 50 consecutive battles in Battle Tower Doubles
-                  **Note: Can also be done in DPPt
+                <td>Win 50 consecutive battles in Battle Tower Doubles**
+                  <br>**Note: Can also be done in DPPt
                 </td>
               </tr>
               <tr>
@@ -92,8 +92,8 @@
                   </div>
                 </td>
                 <td>Multi Ability Ribbon</td>
-                <td>Win 50 consecutive battles in Battle Tower Multi.
-                  **Note: Can also be done in DPPt
+                <td>Win 50 consecutive battles in Battle Tower Multi.**
+                  <br>**Note: Can also be done in DPPt
                 </td>
               </tr>
               <tr>
@@ -104,8 +104,8 @@
                   </div>
                 </td>
                 <td>Pair Ability Ribbon</td>
-                <td>Win 50 consecutive battles in Battle Tower Link Multi.
-                  **Note: Can also be done in DPPt
+                <td>Win 50 consecutive battles in Battle Tower Link Multi.**
+                  <br>**Note: Can also be done in DPPt
                 </td>
               </tr>
               <tr>
@@ -116,8 +116,8 @@
                   </div>
                 </td>
                 <td>World Ability Ribbon</td>
-                <td>Reach Rank 5 in the Wi-Fi Battle Tower challenge
-                  **Note: Can also be done in DPPt
+                <td>Reach Rank 5 in the Wi-Fi Battle Tower challenge**
+                  <br>**Note: Can also be done in DPPt
                 </td>
               </tr>
               <tr>
@@ -176,8 +176,8 @@
                   </div>
                 </td>
                 <td>Effort Ribbon</td>
-                <td>Show mon with 510 EVs in Blackthorn City
-                  **Note: Can also be done in RSE, DPPt, XY, ORAS, USUM, SwSh & BDSP
+                <td>Show mon with 510 EVs in Blackthorn City**
+                  <br>**Note: Can also be done in RSE, DPPt, XY, ORAS, USUM, SwSh & BDSP
                 </td>
               </tr>
               <tr>
@@ -188,8 +188,8 @@
                   </div>
                 </td>
                 <td>Alert Ribbon</td>
-                <td>Show mon on Monday at Route 40
-                  **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                <td>Show mon on Monday at Route 40**
+                  <br>**Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -200,8 +200,8 @@
                   </div>
                 </td>
                 <td>Shock Ribbon</td>
-                <td>Show mon on Tuesday at Route 29
-                  **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                <td>Show mon on Tuesday at Route 29**
+                  <br>**Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -212,8 +212,8 @@
                   </div>
                 </td>
                 <td>Downcast Ribbon</td>
-                <td>Show mon on Wednesday at Lake of Rage
-                  **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                <td>Show mon on Wednesday at Lake of Rage**
+                  <br>**Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -224,8 +224,8 @@
                   </div>
                 </td>
                 <td>Careless Ribbon</td>
-                <td>Show mon on Thursday in Route 36
-                  **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                <td>Show mon on Thursday in Route 36**
+                  <br>**Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -236,8 +236,8 @@
                   </div>
                 </td>
                 <td>Relax Ribbon</td>
-                <td>Show mon on Friday in Route 32
-                  **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                <td>Show mon on Friday in Route 32**
+                  <br>**Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -248,8 +248,8 @@
                   </div>
                 </td>
                 <td>Snooze Ribbon</td>
-                <td>Show mon on Saturday in Blackthorn City
-                  **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                <td>Show mon on Saturday in Blackthorn City**
+                  <br>**Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -260,8 +260,8 @@
                   </div>
                 </td>
                 <td>Smile Ribbon</td>
-                <td>Show mon on Sunday at Route 37
-                  **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                <td>Show mon on Sunday at Route 37**
+                  <br>**Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
             </tbody>
