--- a/pkmn_oras.html
+++ b/pkmn_oras.html
@@ -57,7 +57,9 @@
                 </td>
                 <td>Training Ribbon</td>
                 <td>Show a woman in Cafe Ultimo in Luminose City (XY) or the black belt in front of the Pokemon Center
-                  in Dewford Town (ORAS) a Supremely Trained Pokemon. **Note: Can also be done in X & Y</td>
+                  in Dewford Town (ORAS) a Supremely Trained Pokemon.**
+                  <br>**Note: Can also be done in X & Y
+                </td>
               </tr>
               <tr>
                 <td>
@@ -67,7 +69,8 @@
                   </div>
                 </td>
                 <td>Skillful Battler Ribbon</td>
-                <td>Defeat a Battle Chatelaine **Note: Can also be done in X & Y
+                <td>Defeat a Battle Chatelaine**
+                  <br>**Note: Can also be done in X & Y
                 </td>
               </tr>
               <tr>
@@ -78,8 +81,8 @@
                   </div>
                 </td>
                 <td>Expert Battler Ribbon</td>
-                <td>Defeat a Battle Chatelaine in a Super Battle
-                  **Note: Can also be done in X & Y
+                <td>Defeat a Battle Chatelaine in a Super Battle**
+                  <br>**Note: Can also be done in X & Y
                 </td>
               </tr>
               <tr>
@@ -174,8 +177,8 @@
                   </div>
                 </td>
                 <td>Effort Ribbon</td>
-                <td>Show mon with 510 EVs at Slateport Market
-                  **Note: Can also be done in RSE, DPPt, HGSS, XY, USUM, SwSh & BDSP
+                <td>Show mon with 510 EVs at Slateport Market**
+                  <br>**Note: Can also be done in RSE, DPPt, HGSS, XY, USUM, SwSh & BDSP
                 </td>
               </tr>
               <tr>
@@ -186,8 +189,8 @@
                   </div>
                 </td>
                 <td>Alert Ribbon</td>
-                <td>Show mon on Monday in Mauville Hills
-                  **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                <td>Show mon on Monday in Mauville Hills**
+                  <br>**Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
@@ -198,8 +201,8 @@
                   </div>
                 </td>
                 <td>Shock Ribbon</td>
-                <td>Show mon on Tuesday in Mauville Hills
-                  **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                <td>Show mon on Tuesday in Mauville Hills**
+                  <br>**Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
@@ -210,8 +213,8 @@
                   </div>
                 </td>
                 <td>Downcast Ribbon</td>
-                <td>Show mon on Wednesday in Mauville Hills
-                  **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                <td>Show mon on Wednesday in Mauville Hills**
+                  <br>**Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
@@ -222,8 +225,8 @@
                   </div>
                 </td>
                 <td>Careless Ribbon</td>
-                <td>Show mon on Thursday in Mauville Hills
-                  **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                <td>Show mon on Thursday in Mauville Hills**
+                  <br>**Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
@@ -234,8 +237,8 @@
                   </div>
                 </td>
                 <td>Relax Ribbon</td>
-                <td>Show mon on Friday in Mauville Hills
-                  **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                <td>Show mon on Friday in Mauville Hills**
+                  <br>**Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
@@ -246,8 +249,8 @@
                   </div>
                 </td>
                 <td>Snooze Ribbon</td>
-                <td>Show mon on Saturday in Mauville Hills
-                  **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                <td>Show mon on Saturday in Mauville Hills**
+                  <br>**Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
@@ -258,8 +261,8 @@
                   </div>
                 </td>
                 <td>Smile Ribbon</td>
-                <td>Show mon on Sunday in Mauville Hills
-                  **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                <td>Show mon on Sunday in Mauville Hills**
+                  <br>**Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
@@ -270,8 +273,8 @@
                   </div>
                 </td>
                 <td>Gorgeous Ribbon</td>
-                <td>Buy for 10,000 pokemonies in Mauville City
-                  **Note: Can also be done in DPPt & BDSP
+                <td>Buy for 10,000 pokemonies in Mauville City**
+                  <br>**Note: Can also be done in DPPt & BDSP
                 </td>
               </tr>
               <tr>
@@ -282,8 +285,8 @@
                   </div>
                 </td>
                 <td>Royal Ribbon</td>
-                <td>Buy for 100,000 pokemonies in Mauville City
-                  **Note: Can also be done in DPPt & BDSP
+                <td>Buy for 100,000 pokemonies in Mauville City**
+                  <br>**Note: Can also be done in DPPt & BDSP
                 </td>
               </tr>
               <tr>
@@ -294,8 +297,8 @@
                   </div>
                 </td>
                 <td>Gorgeous Royal Ribbon</td>
-                <td>Buy for 999,999 pokemonies in Mauville City
-                  **Note: Can also be done in DPPt & BDSP
+                <td>Buy for 999,999 pokemonies in Mauville City**
+                  <br>**Note: Can also be done in DPPt & BDSP
                 </td>
               </tr>
               <tr>
@@ -306,8 +309,8 @@
                   </div>
                 </td>
                 <td>Footprint Ribbon</td>
-                <td>Show mon 30 levels higher than caught/received level in Battle Resort
-                  **Note: Can also be done in DPPt, XY, USUM & BDSP
+                <td>Show mon 30 levels higher than caught/received level in Battle Resort**
+                  <br>**Note: Can also be done in DPPt, XY, USUM & BDSP
                 </td>
               </tr>
               <tr>
@@ -318,8 +321,8 @@
                   </div>
                 </td>
                 <td>Best Friends Ribbon</td>
-                <td>Show mon with max affection in Mauville Hills
-                  **Note: Can also be done in XY, USUM, SwSh & BDSP
+                <td>Show mon with max affection in Mauville Hills**
+                  <br>**Note: Can also be done in XY, USUM, SwSh & BDSP
                 </td>
               </tr>
             </tbody>
