--- a/pkmn_rse.html
+++ b/pkmn_rse.html
@@ -310,8 +310,8 @@
                   </div>
                 </td>
                 <td>Effort Ribbon</td>
-                <td>Show mon with 510 EVs at Slateport Market
-                  **Note: Can also be done in DPPt, HGSS, XY, ORAS, USUM, SwSh & BDSP
+                <td>Show mon with 510 EVs at Slateport Market**
+                  <br>**Note: Can also be done in DPPt, HGSS, XY, ORAS, USUM, SwSh & BDSP
                 </td>
               </tr>
             </tbody>
