--- a/pkmn_xy.html
+++ b/pkmn_xy.html
@@ -67,7 +67,9 @@
                 </td>
                 <td>Training Ribbon</td>
                 <td>Show a woman in Cafe Ultimo in Luminose City (XY) or the black belt in front of the Pokemon Center
-                  in Dewford Town (ORAS) a Supremely Trained Pokemon. **Note: Can also be done in ORAS</td>
+                  in Dewford Town (ORAS) a Supremely Trained Pokemon.**
+                  <br>**Note: Can also be done in ORAS
+                </td>
               </tr>
               <tr>
                 <td>
@@ -77,7 +79,8 @@
                   </div>
                 </td>
                 <td>Skillful Battler Ribbon</td>
-                <td>Defeat a Battle Chatelaine **Note: Can also be done in ORAS
+                <td>Defeat a Battle Chatelaine**
+                  <br>**Note: Can also be done in ORAS
                 </td>
               </tr>
               <tr>
@@ -88,8 +91,8 @@
                   </div>
                 </td>
                 <td>Expert Battler Ribbon</td>
-                <td>Defeat a Battle Chatelaine in a Super Battle
-                  **Note: Can also be done in ORAS
+                <td>Defeat a Battle Chatelaine in a Super Battle**
+                  <br>**Note: Can also be done in ORAS
                 </td>
               </tr>
             </tbody>
@@ -114,8 +117,8 @@
                   </div>
                 </td>
                 <td>Contest Memory Ribbon</td>
-                <td>Contest ribbons from previous gens are condensed upon transfer. If the mon has all 40, becomes gold
-                  **Note: Can also be acquired in ORAS & USUM
+                <td>Contest ribbons from previous gens are condensed upon transfer. If the mon has all 40, becomes gold**
+                  <br>**Note: Can also be acquired in ORAS & USUM
                 </td>
               </tr>
               <tr>
@@ -126,8 +129,8 @@
                   </div>
                 </td>
                 <td>Battle Memory Ribbon</td>
-                <td>Tower ribbons from previous gens are condensed upon transfer. If the mon has all 8, becomes gold
-                  **Note: Can also be acquired in ORAS & USUM
+                <td>Tower ribbons from previous gens are condensed upon transfer. If the mon has all 8, becomes gold**
+                  <br>**Note: Can also be acquired in ORAS & USUM
                 </td>
               </tr>
               <tr>
@@ -138,8 +141,8 @@
                   </div>
                 </td>
                 <td>Effort Ribbon</td>
-                <td>Show mon with 510 EVs in Laverre City
-                  **Note: Can also be done in RSE, DPPt, HGSS, ORAS, USUM, SwSh & BDSP
+                <td>Show mon with 510 EVs in Laverre City**
+                  <br>**Note: Can also be done in RSE, DPPt, HGSS, ORAS, USUM, SwSh & BDSP
                 </td>
               </tr>
               <tr>
@@ -150,8 +153,8 @@
                   </div>
                 </td>
                 <td>Alert Ribbon</td>
-                <td>Show mon on Monday in Hotel Ambrette
-                  **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
+                <td>Show mon on Monday in Hotel Ambrette**
+                  <br>**Note: Can also be done in DPPt, HGSS, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -162,8 +165,8 @@
                   </div>
                 </td>
                 <td>Shock Ribbon</td>
-                <td>Show mon on Tuesday in Hotel Camphrier
-                  **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
+                <td>Show mon on Tuesday in Hotel Camphrier**
+                  <br>**Note: Can also be done in DPPt, HGSS, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -174,8 +177,8 @@
                   </div>
                 </td>
                 <td>Downcast Ribbon</td>
-                <td>Show mon on Wednesday in Hotel Marine Snow
-                  **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
+                <td>Show mon on Wednesday in Hotel Marine Snow**
+                  <br>**Note: Can also be done in DPPt, HGSS, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -186,8 +189,8 @@
                   </div>
                 </td>
                 <td>Careless Ribbon</td>
-                <td>Show mon on Thursday in Hotel Coumarine
-                  **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
+                <td>Show mon on Thursday in Hotel Coumarine**
+                  <br>**Note: Can also be done in DPPt, HGSS, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -198,8 +201,8 @@
                   </div>
                 </td>
                 <td>Relax Ribbon</td>
-                <td>Show mon on Friday in Hotel Couriway
-                  **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
+                <td>Show mon on Friday in Hotel Couriway**
+                  <br>**Note: Can also be done in DPPt, HGSS, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -210,8 +213,8 @@
                   </div>
                 </td>
                 <td>Snooze Ribbon</td>
-                <td>Show mon on Saturday in Hotel Cyllage
-                  **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
+                <td>Show mon on Saturday in Hotel Cyllage**
+                  <br>**Note: Can also be done in DPPt, HGSS, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -222,8 +225,8 @@
                   </div>
                 </td>
                 <td>Smile Ribbon</td>
-                <td>Show mon on Sunday in Hotel Coumarine
-                  **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
+                <td>Show mon on Sunday in Hotel Coumarine**
+                  <br>**Note: Can also be done in DPPt, HGSS, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -234,8 +237,8 @@
                   </div>
                 </td>
                 <td>Footprint Ribbon</td>
-                <td> Show mon 30 levels higher than caught/received level in Shalour City
-                  **Note: Can also be done in DPPt, ORAS, USUM & BDSP
+                <td> Show mon 30 levels higher than caught/received level in Shalour City**
+                  <br>**Note: Can also be done in DPPt, ORAS, USUM & BDSP
                 </td>
               </tr>
               <tr>
@@ -246,8 +249,8 @@
                   </div>
                 </td>
                 <td>Best Friends Ribbon</td>
-                <td>Show mon with max affection in Prism Tower
-                  **Note: Can also be done in ORAS, USUM, SwSh & BDSP
+                <td>Show mon with max affection in Prism Tower**
+                  <br>**Note: Can also be done in ORAS, USUM, SwSh & BDSP
                 </td>
               </tr>
             </tbody>
