--- a/pkmn_usum.html
+++ b/pkmn_usum.html
@@ -110,8 +110,8 @@
                   </div>
                 </td>
                 <td>Effort Ribbon</td>
-                <td>Show mon with 510 EVs at in Battle Royal Dome
-                  **Note: Can also be done in RSE, DPPt, HGSS, XY, ORAS, SwSh & BDSP
+                <td>Show mon with 510 EVs at in Battle Royal Dome**
+                  <br>**Note: Can also be done in RSE, DPPt, HGSS, XY, ORAS, SwSh & BDSP
                 </td>
               </tr>
               <tr>
@@ -122,8 +122,8 @@
                   </div>
                 </td>
                 <td>Footprint Ribbon</td>
-                <td>Show mon 30 levels higher than caught/received level in Hano Grand Resort
-                  **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                <td>Show mon 30 levels higher than caught/received level in Hano Grand Resort**
+                  <br>**Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -134,8 +134,8 @@
                   </div>
                 </td>
                 <td>Best Friends Ribbon</td>
-                <td>Show mon with max affection in Malie City
-                  **Note: Can also be done in XY, ORAS, SwSh & BDSP
+                <td>Show mon with max affection in Malie City**
+                  <br>**Note: Can also be done in XY, ORAS, SwSh & BDSP
                 </td>
               </tr>
             </tbody>
