--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <main role="main" class="inner cover">
       <h1 class="cover-heading">Pokemon Ribbon Tracker</h1>
-      <p class="lead">Keep track of how many ribbons you have and which ones you need in each game.</p>
+      <p class="lead cover-paragraph">Keep track of how many ribbons you have and which ones you need in each game.</p>
 
       <!-- ======= Game Section ======= -->
       <section id="Games" class="Games">
@@ -137,7 +137,7 @@
       </section>
 
       <h1 class="cover-heading">Pokemon Marks Tracker</h1>
-      <p class="lead">Keep track of how many markings you have and which ones you need in each game.</p>
+      <p class="lead cover-paragraph">Keep track of how many markings you have and which ones you need in each game.</p>
 
       <!-- ======= Markings Section ======= -->
       <section id="Games" class="Games">
@@ -166,9 +166,9 @@
     <!-- ======= Footer ======= -->
     <footer class="mastfoot mt-auto">
       <div class="inner">
-        <p>All content & design © Pokémon Ribbon Tracker, 2022. <a href="privacy.html">Privacy Policy.</a> <a
+        <p>All content & design © Pokémon Ribbon Tracker, 2023. <a href="privacy.html">Privacy Policy.</a> <a
             href="credits.html">Credits.</a>
-          Pokémon images & names © 1995-2021 Nintendo/Creatures Inc./GAME FREAK inc. TM
+          Pokémon images & names © 1995-2023 Nintendo/Creatures Inc./GAME FREAK inc. TM
         </p>
       </div>
     </footer>
