minor UI tweaks

--- a/pkmn_bdsp.html
+++ b/pkmn_bdsp.html
@@ -34,7 +34,7 @@
     </header>
 
     <main role="main" class="inner cover">
-      <h1 class="cover-heading">Pokemon Brilliant Diamond & Shining Pearl</h1>
+      <h1 class="cover-heading-game">Pokemon Brilliant Diamond & Shining Pearl</h1>
 
       <section>
         <div class="container">
@@ -74,7 +74,7 @@
             </tbody>
           </table>
 
-          <p>If your Pokemon have gone through the ribbon gauntlet then these ribbons below should have been
+          <p class="cover-paragraph">If your Pokemon have gone through the ribbon gauntlet then these ribbons below should have been
             obtained in previous gens already.
           </p>
 
@@ -289,8 +289,9 @@
               </tr>
             </tbody>
           </table>
-
-          <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
+          <div class="button-padding">
+            <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
+          </div>
         </div>
       </section>
 
