--- a/pkmn_sv.html
+++ b/pkmn_sv.html
@@ -35,7 +35,7 @@
     </header>
 
     <main role="main" class="inner cover">
-      <h1 class="cover-heading">Pokemon Scarlet and Violet</h1>
+      <h1 class="cover-heading-game">Pokemon Scarlet and Violet</h1>
 
       <section>
         <div class="container">
@@ -92,7 +92,7 @@
 
       <h2 id="marks" class="marks">Marks</h2>
 
-      <p>You cannot obtain all of these marks on a single Pokemon. These can only be found on wild Pokemon.</p>
+      <p class="cover-paragraph">You cannot obtain all of these marks on a single Pokemon. These can only be found on wild Pokemon.</p>
         
       <section>
         <div class="containers">
@@ -218,7 +218,9 @@
               </tr>
             </tbody>
           </table>
-          <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
+          <div class="button-padding">
+            <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
+          </div>
         </div>
       </section>
 
