--- a/pkmn_xd_colosseum.html
+++ b/pkmn_xd_colosseum.html
@@ -35,7 +35,7 @@
     </header>
 
     <main role="main" class="inner cover">
-      <h1 class="cover-heading">Pokemon Colosseum & XD Gale of Darkness</h1>
+      <h1 class="cover-heading-game">Pokemon Colosseum & XD Gale of Darkness</h1>
 
       <section>
         <div class="container">
@@ -74,7 +74,9 @@
           <!-- 
         <button type="button" value="save" class="button" onclick="save()">Save</button>
         <button type="button" value="selectAll" class="button" onclick="checkAll()">Select All</button>-->
-          <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
+          <div class="button-padding">
+            <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
+          </div>
         </div>
       </section>
 
