--- a/pkmn_hgss.html
+++ b/pkmn_hgss.html
@@ -34,7 +34,7 @@
     </header>
 
     <main role="main" class="inner cover">
-      <h1 class="cover-heading">Pokemon HeartGold & SoulSilver</h1>
+      <h1 class="cover-heading-game">Pokemon HeartGold & SoulSilver</h1>
 
       <section>
         <div class="container">
@@ -133,7 +133,7 @@
             </tbody>
           </table>
 
-          <p>This item below is not required but is recommended to get.</p>
+          <p class="cover-paragraph">This item below is not required but is recommended to get.</p>
 
           <table class="table table-dark table-bordered table-responsive-md">
             <thead>
@@ -157,7 +157,7 @@
             </tbody>
           </table>
 
-          <p>The ribbons below can be acquired in multiple gens</p>
+          <p class="cover-paragraph">The ribbons below can be acquired in multiple gens</p>
 
           <table class="table table-dark table-bordered table-responsive-md">
             <thead>
@@ -266,8 +266,9 @@
               </tr>
             </tbody>
           </table>
-
-          <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
+          <div class="button-padding">
+            <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
+          </div>
         </div>
       </section>
 
