--- a/pkmn_rse.html
+++ b/pkmn_rse.html
@@ -34,7 +34,7 @@
     </header>
 
     <main role="main" class="inner cover">
-      <h1 class="cover-heading">Pokemon Ruby Sapphire & Emerald</h1>
+      <h1 class="cover-heading-game">Pokemon Ruby Sapphire & Emerald</h1>
 
       <section>
         <div class="container">
@@ -291,7 +291,7 @@
             </tbody>
           </table>
 
-          <p>The ribbons below can be acquired in multiple gens</p>
+          <p class="cover-paragraph">The ribbons below can be acquired in multiple gens</p>
 
           <table class="table table-dark table-bordered table-responsive-md">
             <thead>
@@ -316,8 +316,9 @@
               </tr>
             </tbody>
           </table>
-
-          <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
+          <div class="button-padding">
+            <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
+          </div>
         </div>
       </section>
 
