--- a/pkmn_swsh.html
+++ b/pkmn_swsh.html
@@ -34,7 +34,7 @@
     </header>
 
     <main role="main" class="inner cover">
-      <h1 class="cover-heading">Pokemon Sword & Shield</h1>
+      <h1 class="cover-heading-game">Pokemon Sword & Shield</h1>
 
       <h2>Ribbons</h2>
 
@@ -83,7 +83,7 @@
             </tbody>
           </table>
 
-          <p>The ribbons below can be acquired in multiple gens</p>
+          <p class="cover-paragraph">The ribbons below can be acquired in multiple gens</p>
 
           <table class="table table-dark table-bordered table-responsive-md">
             <thead>
@@ -129,7 +129,7 @@
 
       <h2 id="marks" class="marks">Marks</h2>
 
-      <p>You cannot obtain all of these marks on a single Pokemon. These can only be found on wild Pokemon.</p>
+      <p class="cover-paragraph">You cannot obtain all of these marks on a single Pokemon. These can only be found on wild Pokemon.</p>
         
       <section>
         <div class="containers">
@@ -726,7 +726,9 @@
               </tr>
             </tbody>
           </table>
-          <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
+          <div class="button-padding">
+            <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
+          </div>
         </div>
       </section>
 
